# dirloom

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  QWEN.md  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: cli.rs  lib.rs  main.rs
src/backup/: core.rs  error.rs  mod.rs  progress.rs  sync.rs
src/tui/: app.rs  dir_picker.rs  help.rs  log_buffer.rs  mod.rs  ui.rs
tests/: integration.rs
